--- a/food/templates/food/account/profile.html
+++ b/food/templates/food/account/profile.html
@@ -3,6 +3,9 @@
 {% block content %}
 
 <style>
+btn{
+    background-color: #5064f4;
+}
 
 </style>
 
@@ -10,7 +13,7 @@
 <div class="row">
 	<div class="col-md-3">
 		<div class="card card-body">
-			<a class="btn btn-warning" href="{% url 'home' %}"> &#8592; Back to Profile</a>
+			<a class="btn btn-primary" href="{% url 'home' %}"> &#8592; Back to Profile</a>
 			<hr>
 			<h3 style="text-align: center">Account Settings</h3>
 			<hr>
