--- a/food/templates/food/account/register.html
+++ b/food/templates/food/account/register.html
@@ -14,13 +14,13 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #7abecc !important;
+			background: #5064f4 !important;
 		}
 		.user_card {
 			width: 350px;
 			margin-top: auto;
 			margin-bottom: auto;
-			background: #74cfbf;
+			background: #f8f8f8;
 			position: relative;
 			display: flex;
 			justify-content: center;
@@ -38,11 +38,11 @@
 		}
 
 		#form-title{
-			color: #fff;
+			color: #333;
 		}
 		.login_btn {
 			width: 100%;
-			background: #33ccff !important;
+			background: #5064f4 !important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -53,7 +53,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #f7ba5b !important;
+			background: #5064f4 !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
