--- a/food/templates/food/dashboard.html
+++ b/food/templates/food/dashboard.html
@@ -134,7 +134,10 @@
 <div class="row">
    <div class="col-lg-6 col-md-12">
       <div style="margin: 10px 15px 10px 15px" class="text-center">
-         <h2>MEALS</h2>
+{#          <a href="{% url 'populate_foods' %}">#}
+{#            <button class="btn btn-primary">Populate Food</button>#}
+{#          </a>#}
+          <h2 style="margin-top: 20px">MEALS</h2>
       </div>
       {% for meal_plan in meal_plans %}
       <div id="meal_plan" class="card" style="margin: 10px 15px 10px 15px">
@@ -144,7 +147,7 @@
                   <a href="{% url 'meal_details' meal_plan.pk %}">
                      <div class="d-flex flex-wrap">
                         <div>
-                           <h5><b>{{ meal_plan.day }}  </b><span class="badge badge-secondary" style="background-color: #5064f4; font-size: 13px">{{ meal_plan.time }}</span></h5>
+                           <h5><b>{{ meal_plan.day }}  </b><span class="badge badge-secondary" style="background-color: #5064f4; font-size: 13px; color: #fbfbfb">{{ meal_plan.time }}</span></h5>
                            <h4 class="card-title">{{ meal_plan.recipe.name }}</h4>
 
                         </div>
@@ -157,7 +160,7 @@
                   <a href="{% url 'delete_meal' meal_plan.pk %}" class="p-1">
                     <i class="bi bi-trash " style="font-size: 2rem; color: #555"></i>
                   </a>
-                  <button class="btn btn-info p-2">{{ meal_plan.member }}</button>
+                  <img class="rounded-circle" style="width: 40px; height: 40px;" src="{{request.user.member.profile_pic.url}}" >
                </div>
             </div>
          </div>
@@ -166,14 +169,14 @@
       <div id="add-food" class="card" style="margin: 10px 15px 10px 15px">
          <a href="{% url 'add_meal' %}" style="color: black;">
             <div class="card-body">
-               <h4 class="card-title"> Add Food </h4>
+               <h4 class="card-title"> Add Meal </h4>
             </div>
          </a>
       </div>
    </div>
    <div class="col-lg-6 col-md-12">
       <div style="margin: 10px 15px 10px 15px" class="text-center">
-         <h2>SHOPPING LIST</h2>
+         <h2 style="margin-top: 20px">SHOPPING LIST</h2>
       </div>
       <div class="card" style="margin: 10px 15px 10px 15px">
          <div id="myDIV" class="header">
