--- a/food/templates/food/food/foods.html
+++ b/food/templates/food/food/foods.html
@@ -6,8 +6,15 @@
     a {
   color: #fbfbfb;
 }
+    .btn-primary{
+        background-color: #5064f4;
+    }
+    h2{
+        margin-top: 15px;
+    }
     </style>
-
+<h2>Foods</h2>
+    <hr>
     <div class="d-flex justify-content-center">
         <button type="button" class="btn btn-primary">
             <a href="{% url 'create_food'%}">Create New Food</a>
@@ -24,8 +31,8 @@
   {% for food in foods %}
     <tr>
       <td>{{ food.name }} - {{ food.serving_size }} {{ food.unit }}</td>
-      <td style="width:5%"><button type="button" class="btn btn-primary"><a href="{% url 'edit_food' food.pk %}">View</a></button></td>
-      <td style="width:5%"><button type="button" class="btn btn-danger"><a href="{% url 'delete_food' food.pk %}">Delete</a></button></td>
+        <td style="width: 5%"><a href="{% url 'edit_food' food.pk %}"><button type="button" class="btn btn-primary">View</button></a></td>
+      <td style="width: 5%"><a href="{% url 'delete_food' food.pk %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
     </tr>
   {% endfor %}
   </tbody>
