--- a/food/templates/food/meal/add_meal.html
+++ b/food/templates/food/meal/add_meal.html
@@ -1,6 +1,42 @@
 {%  extends 'food/main.html' %}
 {%  include 'food/navbar.html' %}
 {% block content %}
+
+    <style>
+        form select {
+            width: 45%;
+            height: 36px;
+            border: none;
+            border-bottom: lightgray 3px solid;
+        }
+        form select:focus{
+            outline: none;
+            border-bottom: #5064f4 3px solid;
+        }
+        form input {
+            width: 45%;
+            height: 36px;
+            border: none;
+            border-bottom: lightgray 3px solid;
+        }
+        form input:focus{
+            outline: none;
+            border-bottom: #5064f4 3px solid;
+        }
+
+        hr{
+            margin: 8px 0 8px 0;
+        }
+        .btn-info{
+            width: 70%;
+            background-color: #5064f4;
+        }
+
+
+
+    </style>
+
+
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -8,12 +44,23 @@
         {% endfor %}
     </ul>
     {% endif %}
-    <h2>Add Meal</h2>
+    <div class="container ">
+    <h2 style="padding-top: 15px">Add Meal</h2>
+    <hr>
     <form action="" method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <a href="#"><button class="btn">Cancel</button></a>
-        <input class="btn btn-info" type="Submit">
+            {% for foo in form %}
+                <div class="d-flex justify-content-between">
+                {{ foo.label }}
+                {{ foo }}
+                </div>
+                <hr>
+            {% endfor %}
+            <div class="d-flex justify-content-between" style="margin-bottom: 10px;">
+              <a href="#"><button class="btn" id="cancel">Cancel</button></a>
+                <input class="btn btn-info" type="Submit">
+            </div>
     </form>
-
+    </div>
 {% endblock %}
+
