--- a/food/templates/food/recipe/add_ingredient.html
+++ b/food/templates/food/recipe/add_ingredient.html
@@ -1,18 +1,34 @@
 {%  extends 'food/main.html' %}
 {%  include 'food/navbar.html' %}
 {% block content %}
+    <style>
+        form input {
+            border: none;
+            border-bottom: lightgray 3px solid;
+        }
+        form input:focus{
+            outline: none;
+            border-bottom: #5064f4 3px solid;}
 
-    <h1>Add Ingredient</h1>
-
-    {{ food.name }}
-    {{ food.calories }}
-    {{ food.serving_size }}
+        h2{
+            margin-top: 15px;
+        }
+        p{
+            margin-bottom: 4px;
+        }
+    </style>
+<div class="container">
+    <h2>Add Ingredient</h2>
+    <hr>
+    <h5>Food: {{ food.name }}</h5>
+    <h5>Calories: {{ food.calories }}</h5>
+    <h5>Serving Size: {{ food.unit }}</h5>
     <form action="" method="POST">
     {% csrf_token %}
         {{ form }}
-        <input type="Submit">
+        <input type="Submit" class="btn">
     </form>
 
-
+</div>
 
 {% endblock%}
