--- a/food/templates/food/recipe/recipe_details.html
+++ b/food/templates/food/recipe/recipe_details.html
@@ -1,8 +1,20 @@
 {%  extends 'food/main.html' %}
 {%  include 'food/navbar.html' %}
 {% block content %}
-
-    <h1>Recipe Details</h1>
+    <style>
+    h1{
+        margin-top: 15px;
+    }
+    h3{
+        color: #5064f4;
+    }
+    p{
+        margin-bottom: 4px;
+    }
+    </style>
+    <div class="container">
+    <h1>{{ recipe.name }}</h1>
+        <hr>
     <h3>Price</h3>
     <h5>Price per Serving: {{ recipe.price_per_serving }}</h5>
     <h5>Price per 100 calories: {{ recipe.price_per_100cal }}</h5>
@@ -15,8 +27,10 @@
     <h5>Protein: {{ recipe.protein }}</h5>
     <hr>
     <h3>Ingredients</h3>
+    <ul>
     {% for ingredient in ingredients %}
-        <p>{{ ingredient.name }} x {{ ingredient.serving_amount }}</p>
+        <li>{{ ingredient.name }} x {{ ingredient.serving_amount }}</li>
     {% endfor %}
-
+    </ul>
+    </div>
 {% endblock%}
