--- a/food/templates/food/recipe/recipes.html
+++ b/food/templates/food/recipe/recipes.html
@@ -5,9 +5,13 @@
     a {
         color: #fbfbfb;
     }
+    h2{
+        margin-top: 15px;
+    }
     </style>
 
-    <h1>Recipes </h1>
+    <h2>Recipes </h2>
+    <hr>
     <div class="d-flex justify-content-center">
         <button type="button" class="btn btn-primary">
             <a href="{% url 'create_recipe'%}">Create New Recipes</a>
