--- a/food/templates/food/food/foods.html
+++ b/food/templates/food/food/foods.html
@@ -16,9 +16,9 @@
 <h2>Foods</h2>
     <hr>
     <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-primary">
-            <a href="{% url 'create_food'%}">Create New Food</a>
-        </button>
+        <a href="{% url 'create_food'%}">
+        <button type="button" class="btn btn-primary">Create New Food</button>
+        </a>
     </div>
 
 <table class="table">
