--- a/food/templates/food/food/edit_food.html
+++ b/food/templates/food/food/edit_food.html
@@ -22,6 +22,7 @@
             background-color: #5064f4;
         }
 
+
         h2{
             margin-top: 15px;
         }
@@ -47,6 +48,7 @@
                 <input class="btn btn-info" type="Submit">
             </div>
     </form>
+    <a href="{% url 'foods' %}"><button class="btn" id="cancel" style="width: 100%">Cancel</button></a>
 </div>
 
 {% endblock %}
