--- a/food/templates/food/recipe/create_recipe.html
+++ b/food/templates/food/recipe/create_recipe.html
@@ -39,6 +39,7 @@
                 <input class="btn btn-info" type="Submit">
             </div>
     </form>
+<a href="{% url 'recipes' %}"><button class="btn" id="cancel" style="width: 100%">Cancel</button></a>
 </div>
 
 {% endblock %}
