--- a/food/templates/food/recipe/recipe_details.html
+++ b/food/templates/food/recipe/recipe_details.html
@@ -32,5 +32,6 @@
         <li>{{ ingredient.name }} x {{ ingredient.serving_amount }}</li>
     {% endfor %}
     </ul>
+    <a href="{% url 'recipes' %}"><button class="btn" id="cancel">Back</button></a>
     </div>
 {% endblock%}
